--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,13 @@
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 
+    <style name="TextStyleHeaderTitle" parent="TextStyleGeneralAsWhite">
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">80dp</item>
+
+    </style>
+
 
     <style name="TextStyleGeneralAsPrimary" parent="android:Widget.TextView">
         <item name="android:layout_height">wrap_content</item>
