--- a/app/src/main/res/layout/dialog_content.xml
+++ b/app/src/main/res/layout/dialog_content.xml
@@ -13,37 +13,38 @@
               android:paddingBottom="14dp"
               android:gravity="center"
               android:id="@+id/tvTitle"
-              android:textSize="22sp"
+              android:textSize="26sp"
               android:text="@string/register_success_title"
               android:background="@color/colorPrimary"/>
 
-    <ImageView android:layout_width="70dp"
-               android:layout_height="70dp"
+    <ImageView android:layout_width="80dp"
+               android:layout_height="80dp"
                android:layout_gravity="center"
                android:id="@+id/ivIcon"
-               android:layout_marginTop="10dp"
+               android:layout_marginTop="24dp"
                android:src="@drawable/check_signxxxhdpi"/>
 
     <TextView android:layout_width="wrap_content"
-              android:textSize="18sp"
+              android:textSize="20sp"
               android:layout_marginTop="20dp"
               android:layout_marginEnd="20dp"
               android:id="@+id/tvMessage"
+              android:layout_gravity="center_horizontal"
               android:layout_marginStart="20dp"
               android:gravity="center"
               android:textColor="@color/colorPrimary"
-              android:text="@string/register_success_message"
+              android:text="@string/register_failed_message"
               android:layout_height="wrap_content"/>
 
-    <Button android:layout_width="150dp"
+    <Button android:layout_width="180dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:id="@+id/btnAction"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="22dp"
             android:textColor="@color/colorWhite"
             android:text="@string/close"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:background="@drawable/button_round_corner"/>
 
 
